--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.12",
     "@types/marked": "^6.0.0",
     "marked": "^12.0.1",
     "next": "14.1.4",
