--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.12",
     "@types/marked": "^6.0.0",
+    "@types/prismjs": "^1.26.3",
     "marked": "^12.0.1",
     "next": "14.1.4",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18"
   },
