--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.12",
     "@types/marked": "^6.0.0",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.378.0",
     "marked": "^12.0.1",
     "next": "14.1.4",
+    "next-themes": "^0.3.0",
     "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
