--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/supabase-js": "^2.43.4",
     "@tailwindcss/typography": "^0.5.12",
     "@types/marked": "^6.0.0",
     "@types/prismjs": "^1.26.3",
